# SNData

./: .codeclimate.yml  .gitignore  .readthedocs.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  Untitled.ipynb  cfht_filters.txt  demo_class.py  et HEAD^^  push_pypi  pyproject.toml  requirements.txt  setup.py
.github/workflows/: PackageTest.yml  python-publish.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
SNData/: __init__.py  _combine_data.py  _integrations.py  _osc.py  _utils.py
SNData/csp/: __init__.py  _data_access_funcs.py  _module_meta_data.py
SNData/des/: __init__.py  _data_access_funcs.py  _module_meta_data.py
demos/: header.html  plot_data.py  plot_model.py  plot_spectrum.py
docs/: requirements.txt
sndata/: __init__.py  _base.py  _combine_data.py  _factory_funcs.py  _integrations.py  _iraf_parse.py  _utils.py  base.py  base_classes.py  exceptions.py  osc.py  utils.py
tests/: __init__.py  base_tests.py  combined_datasets.py  data_parsing_template_tests.py  docs.yml  standard_ui_template_tests.py  template_tests.py  test_base_classes.py  test_bsnip.py  test_combined_datasets.py  test_csp.py  test_csp_dr1.py  test_csp_dr3.py  test_data_access.py  test_des.py  test_des_sn3yr.py  test_essence.py  test_essence_narayan16.py  test_exceptions.py  test_file_handling.py  test_integrations.py  test_jla.py  test_jla_betoule14.py  test_loss.py  test_osc.py  test_sdss.py  test_sdss_sako18.py  test_sdss_sako18spec.py  test_sncosmo.py  test_snls.py  test_snls_balland09.py  test_surveys.py  test_surveys_data.py  test_surveys_docs.py  test_sweetspot.py  test_utils.py
(+1725 files in other folders)
